--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-01-26 (v1.20)
+
+- Update for API version 101032 (Deadlands v7.2.5).
+
 2021-08-29 (v1.19)
 
 - Update for API version 101031 (Waking Flame v7.1.5).
