* AAQ.lua: Update. * AAQ.txt: Update. * ChangeLog: Update.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-03-14 (v1.21)
+
+- Update for API version 101033 (Ascending Tide v7.3.5).
+
 2022-01-26 (v1.20)
 
 - Update for API version 101032 (Deadlands v7.2.5).
