* AAQ.lua: Update. * AAQ.txt: Update. * ChangeLog: Update.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-06-05 (v1.22)
+
+- Update for API version 101034 (High Isle v8.0.0).
+
 2022-03-14 (v1.21)
 
 - Update for API version 101033 (Ascending Tide v7.3.5).
