--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-02-03 (v1.23)
+
+- Update for API version 101036 (Firesong v8.2.5).
+
 2022-06-05 (v1.22)
 
 - Update for API version 101034 (High Isle v8.0.0).
