* AAQ.lua: Try harder to terminate dialog when quest is accepted.  Actually write to chat window. * AAQ.txt: Update * ChangeLog: Update * Makefile: Use AAQ for AutoHotKey hint.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2024-07-28 (v1.24)
+
+- Update for API version 101041 (Scions of Ithelia v9.3.0).
+
+- Try harder to end quest dialog when quest has been accepted.
+
+- Actually show chat messages when quest is accepted or completed.
+
 2023-02-03 (v1.23)
 
 - Update for API version 101036 (Firesong v8.2.5).
